fix tech comp API
